--- a/first-website/styles/style.css
+++ b/first-website/styles/style.css
@@ -1,3 +1,38 @@
-p {
-  color: red;
+html {
+  font-size: 10px; /* px means "pixels": the base font size is now 10 pixels high */
+  font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
+}
+
+h1 {
+  padding: 20px 0;
+  font-size: 35px;
+  color: black;
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+  max-width: 90%;
+  border: 2px solid black;
+}
+
+p,
+li {
+  font-size: 16px;
+  line-height: 2;
+  letter-spacing: 1px;
+}
+
+html {
+  background-color: #00539f;
+}
+
+body {
+  width: 600px;
+  margin: 0 auto;
+  background-color: #ff9500;
+  padding: 0 20px 20px 20px;
+  margin: 25px auto;
+  border: 5px solid black;
 }
