--- a/model/styles.css
+++ b/model/styles.css
@@ -68,7 +68,7 @@ body {
 .intro-section,
 .instructions-section {
   background: var(--surface-color);
-  padding: 1.5rem;
+  padding: 0.4rem 1.4rem;
   border-radius: var(--border-radius);
   box-shadow: var(--shadow-sm);
   margin-bottom: 1rem;
@@ -78,18 +78,7 @@ body {
 .intro-text {
   font-size: 1rem;
   color: var(--text-primary);
-  margin: 0rem;
-}
-
-.instructions-section {
-  border-left: 4px solid var(--secondary-color);
-}
-
-.instructions-section h2 {
-  font-size: 1.25rem;
-  font-weight: 600;
-  color: var(--text-primary);
-  margin-bottom: 1rem;
+  margin: 1rem 0rem;
 }
 
 .instructions-list {
@@ -111,7 +100,7 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  color: var(--secondary-color);
+  color: rgb(215, 47, 47);
   font-weight: bold;
   font-size: 1rem;
 }
